--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,6 +83,19 @@ jobs:
           load: true
           tags: local/s3-resource-operator:latest
 
+      - name: Inspect Docker image
+        run: |
+          echo "### Docker Image Information ###"
+          echo ""
+          echo "Image ID and Size:"
+          docker images local/s3-resource-operator:latest --format "table {{.Repository}}:{{.Tag}}\t{{.ID}}\t{{.Size}}"
+          echo ""
+          echo "Image History (Layers):"
+          docker history local/s3-resource-operator:latest --human --no-trunc
+          echo ""
+          echo "Layer Count:"
+          docker history local/s3-resource-operator:latest --quiet | wc -l
+
       - name: Scan image
         uses: aquasecurity/trivy-action@master
         with:
