--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "s3-resource-operator",
   "version": "0.0.0-development",
-  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/runningman84/s3-resource-operator.git"
+  },
+  "author": "runningman84",
+  "license": "MIT",
+  "private": true,
+  "scripts": {
+    "release": "semantic-release"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.0.0",
